@@ -3,6 +3,7 @@ Version 2.0.0-dev
 - marked BookPagesStorage as final
 - BC break: changed parameters of method BookPagesStorage::getIndex
 - allowed Nette 3
+- BC break: removed property BookControl::$lang
 
 Version 1.4.0
 - allowed customization of index and page templates
